--- a/src/containers/Enrolment/Enrolment.scss
+++ b/src/containers/Enrolment/Enrolment.scss
@@ -2,6 +2,10 @@ input {
   outline: none;
 }
 
+.close {
+  display: none;
+}
+
 .enrolment-container {
   position: absolute;
   display: block;
@@ -14,6 +18,34 @@ input {
   letter-spacing: normal;
   color: #ffffff;
   z-index: 1;
+
+  .color-picker {
+    position: absolute;
+    height: 100%;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+
+    >div {
+      width: auto;
+      height: auto;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%,-50%);
+    }
+
+    .picker-background {
+        display: block;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background: transparent;
+        z-index: -1;
+    }
+  }
 
   .content {
     height: calc(100% - 303px);
