--- a/src/containers/ViewRecipe/Function/ViewRecipe.scss
+++ b/src/containers/ViewRecipe/Function/ViewRecipe.scss
@@ -52,10 +52,9 @@
 
 .detail-content-main-view-cup {
   position: absolute;
-  width: 50%;
+  display: block;
+  width: 100%;
   height: 90%;
-  border: 1px solid #707070;
-  box-sizing: border-box;
   left: 50%;
   top: 50%;
   transform: translate(-50%,-50%);
@@ -66,8 +65,6 @@
   display: block;
   width: 70%;
   padding-bottom: 70%;
-  border: 1px solid #707070;
-  box-sizing: border-box;
   left: 50%;
   top: 50%;
   transform: translate(-50%,-50%);
@@ -99,9 +96,21 @@
     width: 92px;
     height: 92px;
     margin-top: 20px;
+    padding: 14px;
     border: 1px solid #ffffff;
     box-sizing: border-box;
     border-radius: 10px;
+
+    span {
+      display: block;
+      font-size: 12px;
+      color: #fff;
+    }
+
+    span:first-child {
+        font-size: 10px;
+        margin-bottom: 15%;
+    }
   }
 
   .tags {
