--- a/src/containers/ViewRecipe/ViewRecipe.scss
+++ b/src/containers/ViewRecipe/ViewRecipe.scss
@@ -23,22 +23,20 @@
     .detail-content-arrow {
       display: block;
       position: absolute;
-      width: 1.5%;
+      width: 5%;
       height: 6%;
       top: 50%;
       -ms-transform: translateY(-50%);
       transform: translateY(-50%);
       cursor: pointer;
-
-      border: 1px solid #000;
     }
 
     .left {
-      left: -4%;
+      left: -6%;
     }
 
     .right {
-      right: -4%;
+      right: -6%;
     }
   
     .detail-content-main {
@@ -66,13 +64,6 @@
           text-align: center;
           background-color: rgba(8, 15, 36, 0.4);
 
-          >span::before {
-            content: '';
-            display: inline-block;
-            vertical-align: middle;
-            height: 100%;
-          }
-
           >span {
             display: inline-block;
             width: 15%;
@@ -80,6 +71,11 @@
             font-size: 20px;
             text-align: center;
             cursor: pointer;
+          }
+
+          >span#comment {
+            background-image: url("/src/static/images/comment-w.svg");
+            background-color: #fff;
           }
           
         }
@@ -100,6 +96,7 @@
     width: 10%;
     height: 100%;
     right: 0;
+    z-index: -1;
 
     .side-button-area {
       position: absolute;
@@ -114,8 +111,6 @@
         width: 100%;
         padding-bottom: 100%;
         margin-bottom: 20%;
-        border: 1px solid #080f24;
-        border-radius: 100%;
         cursor: pointer;
       }
 
