--- a/src/containers/MainView/MainView.scss
+++ b/src/containers/MainView/MainView.scss
@@ -230,13 +230,38 @@ body {
 
       .loading_rect {
         position: absolute;
-        z-index: 10000;
+        z-index: 100;
         width: auto;
         height: auto;
         left: 50%;
 
         &._hide {
           display: none;
+        }
+      }
+
+      .nodata_rect {
+        position: absolute;
+        width: 100%;
+        height: auto;
+
+        .nodata_image {
+          width: auto;
+          height: 100px;
+          background-image: url("../../static/images/error.png");
+          background-repeat: no-repeat;
+          background-position: center;
+          background-size: contain;
+        }
+
+        .nodata_text {
+          width: auto;
+          height: auto;
+          margin-top: 20px;
+          font-family: NotoSansCJKkr;
+          font-size: 40px;
+          color: #ffffff;
+          text-align: center;
         }
       }
 
