### #35 메인/검색 고도화 See: Github issue #35 --------------------------------------- ### 작업파일 * Header.jsx * MainView.jsx/scss * SearchResult.jsx * ViewRecipe.jsx/scss --------------------------------------- ### 작업내용 * 로고 클릭 시 열려 있는 창 닫는 동작 추가 * Main, MyMenu, 검색 결과 칵테일 누를 시 자세히 보기 창 Data연동 되도록 수정 * 자세히 보기 창 닫기, 에디트 클릭 이벤트 연결

--- a/src/containers/MainView/MainView.scss
+++ b/src/containers/MainView/MainView.scss
@@ -32,6 +32,12 @@ body {
   width: 100%;
   height: 100%;
 
+  .viewreipe_rect {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
+
   //중간 text Style
   .explanation_rect {
     grid-column: 1 / span 5;
