--- a/src/containers/ViewRecipe/ViewRecipe.scss
+++ b/src/containers/ViewRecipe/ViewRecipe.scss
@@ -84,6 +84,7 @@
     transform: translate(-50%, -50%);
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.6);
     background-color: #080f24;
+    z-index: 1;
 
     .detail-content-arrow {
       display: block;
