### #42 레시피 자세히 보기 기능 See: Github issue #42 --------------------------------------- ### 작업파일 * MainView.scss * NotoSans-Light.otf --------------------------------------- ### 작업내용 * window에 NotoSans-Light font 없는 경우 추가

--- a/src/containers/MainView/MainView.scss
+++ b/src/containers/MainView/MainView.scss
@@ -10,6 +10,11 @@
   font-weight: normal;
   src: url("../../static/MyriadPro-It.otf") format("opentype");
 }
+@font-face {
+  font-family: "NotoSansCJKkr";
+  font-weight: 300;
+  src: url("../../static/NotoSans-Light.otf") format("opentype");
+}
 html,
 body {
   padding: 0;
