### #46 로딩 스피너 수정 See: Github issue #46
### 작업내용
* 자세히 보기 data 변경 시 로딩 스피너 추가
* 검색 시 로딩 스피너 변경

--- a/src/containers/ViewRecipe/ViewRecipe.scss
+++ b/src/containers/ViewRecipe/ViewRecipe.scss
@@ -105,6 +105,26 @@
       }
     }
 
+    .loading_rect {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      z-index: 100;
+      background-color: #ffffff41;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      .loading_container {
+        width: auto;
+        height: auto;
+      }
+
+      &._hide {
+        display: none;
+      }
+    }
+
     .detail-content-main {
       position: relative;
       width: 100%;
