--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -276,4 +276,15 @@
       grid-row: 2 / span 2;
     }
   }
+
+  .opacity_rect {
+    background-color: #ffffff;
+    opacity: 0.4;
+    grid-row: 3 / span 1;
+    grid-column: 1 / span 3;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 345px;
+  }
 }
