### #46 스크롤 수정, 삭제/탈퇴 팝업 수정 See: Github issue #46
### 작업내용
* 마우스 over할 시 스크롤 보이도록 수정
* 스크롤 바 css 수정
* 삭제/탈퇴 팝업 시 text size변경, blur background color 변경

--- a/src/containers/LoginPopup/LoginPopup.scss
+++ b/src/containers/LoginPopup/LoginPopup.scss
@@ -472,6 +472,7 @@
         width: 250px;
         height: 100px;
         background-color: #0f1835;
+        border: 1px solid rgba(0, 0, 0, 0.548);
 
         .text {
           display: inline-block;
@@ -480,8 +481,8 @@
           background-color: transparent;
           font-family: NotoSansCJKkr;
           font-weight: bold;
-          font-size: 25px;
-          line-height: 1.8;
+          font-size: 20px;
+          line-height: 2.5;
           color: #ff365d;
         }
 
