--- a/src/containers/SearchResult/SearchResult.scss
+++ b/src/containers/SearchResult/SearchResult.scss
@@ -61,7 +61,7 @@
 
 .notifypopup_rect {
   position: absolute;
-  background-color: #080f24ee;
+  background-color: rgba(255, 255, 255, 0.4);
   width: 100%;
   height: 100%;
   display: flex;
@@ -80,8 +80,9 @@
       background-color: transparent;
       font-family: NotoSansCJKkr;
       font-weight: bold;
-      font-size: 25px;
-      line-height: 1.8;
+      font-size: 20px;
+      line-height: 2.5;
+      text-align: center;
       color: #ff365d;
       cursor: default;
     }
