--- a/src/containers/SearchPopup/SearchPopup.scss
+++ b/src/containers/SearchPopup/SearchPopup.scss
@@ -12,7 +12,7 @@
     min-width: 300px;
     height: auto;
     background-color: $main-color;
-    font-family: MyriadPro;
+    font-family: NotoSansCJKkr-Regular;
     font-size: 35px;
     color: #ffffff;
     border: 0px;
@@ -20,10 +20,15 @@
   }
 
   .type {
-    width: 123px;
-    min-width: 123px;
+    width: 140px;
+    min-width: 140px;
     height: auto;
     line-height: 1.8;
+    font-family: NotoSansCJKkr-Regular;
+    font-size: 20px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
   }
 
   .material_rect {
@@ -109,6 +114,7 @@
   overflow: hidden;
   overflow-x: auto;
   -ms-overflow-style: none; // IE에서 스크롤바 감춤
+  scrollbar-width: none; //파이어폭스
   &::-webkit-scrollbar {
     display: none !important; // 윈도우 크롬 등
   }
@@ -119,7 +125,7 @@
     margin-left: 25px;
     padding: 10.5px 26px 10.5px 26px;
     line-height: 43px;
-    font-family: MyriadPro-It;
+    font-family: AvenirLT;
     cursor: pointer;
 
     &:first-child {
