--- a/src/components/SearchResultItem/SearchResultItem.scss
+++ b/src/components/SearchResultItem/SearchResultItem.scss
@@ -57,9 +57,8 @@
       margin-left: 16.7px;
       margin-bottom: 11px;
       height: 37px;
-      font-family: NotoSansCJKkr;
+      font-family: NotoSansCJKkr-Medium;
       font-size: 25px;
-      font-weight: 500;
       font-style: normal;
       font-stretch: normal;
       line-height: 1.48;
@@ -111,7 +110,7 @@
           height: 100%;
           text-align: center;
           vertical-align: middle;
-          font-family: NotoSansCJKkr;
+          font-family: NotoSansCJKkr-Medium;
           font-size: 15px;
           line-height: 1.47;
           letter-spacing: normal;
