--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -68,9 +68,8 @@
           .text_rect {
             margin-right: 45px;
             height: auto;
-            font-family: NotoSansCJKkr;
+            font-family: NotoSansCJKkr-Regular;
             font-size: 20px;
-            font-weight: normal;
             font-style: normal;
             font-stretch: normal;
             line-height: 0.55;
@@ -108,8 +107,8 @@
         margin: 0 30px 0 30px;
         outline: none;
         color: #ff365d;
+        font-family: NotoSansCJKkr-Medium;
         font-size: 20px;
-        font-weight: 500;
         cursor: pointer;
 
         &._out {
@@ -210,6 +209,7 @@
           min-width: 123px;
           height: auto;
           line-height: 1.8;
+          font-family: NotoSansCJKkr-Regular;
         }
       }
 
@@ -230,6 +230,29 @@
         width: 100%;
         height: 100%;
         grid-row: 2 / span 1;
+
+        div {
+          -ms-overflow-style: -ms-autohiding-scrollbar; // IE에서 스크롤바 감춤
+          scrollbar-width: none; //파이어폭스
+          &::-webkit-scrollbar {
+            display: none !important; // 윈도우 크롬 등
+          }
+
+          &:hover {
+            scrollbar-width: unset; //파이어폭스
+            &::-webkit-scrollbar {
+              display: block !important; // 윈도우 크롬 등
+              width: 10px;
+              background-color: rgba(128, 128, 128, 0.185);
+              border-radius: 15px;
+            }
+          }
+
+          &::-webkit-scrollbar-thumb {
+            background-color: #030303;
+            border-radius: 15px;
+          }
+        }
       }
 
       .notresult_rect {
@@ -252,18 +275,11 @@
         .text_rect {
           width: auto;
           height: auto;
-          font-family: NotoSansCJKkr;
+          font-family: NotoSansCJKkr-Regular;
           font-size: 30px;
           color: white;
         }
       }
-
-      // div {
-      //   -ms-overflow-style: none; // IE에서 스크롤바 감춤
-      //   &::-webkit-scrollbar {
-      //     display: none !important; // 윈도우 크롬 등
-      //   }
-      // }
 
       @media (max-width: 470px) {
         & {
