--- a/src/containers/LoginPopup/LoginPopup.scss
+++ b/src/containers/LoginPopup/LoginPopup.scss
@@ -115,6 +115,7 @@
       font-size: 20px;
       color: #080f24;
       text-align: center;
+      font-family: NotoSansCJKkr-Regular;
       margin-bottom: 29.7px;
       cursor: pointer;
     }
@@ -379,7 +380,7 @@
       border-radius: 18px;
       border-color: transparent;
       background-color: #bbbbbb;
-      font-family: NotoSansCJKkr;
+      font-family: NotoSansCJKkr-Regular;
       font-size: 20px;
       color: #080f24;
       text-align: center;
@@ -392,7 +393,7 @@
       border-radius: 18px;
       border-color: transparent;
       background-color: #bbbbbb;
-      font-family: NotoSansCJKkr;
+      font-family: NotoSansCJKkr-Regular;
       font-size: 20px;
       color: #080f24;
       text-align: center;
@@ -629,7 +630,7 @@
       border-radius: 18px;
       border-color: transparent;
       background-color: #bbbbbb;
-      font-family: NotoSansCJKkr;
+      font-family: NotoSansCJKkr-Regular;
       font-size: 20px;
       color: #080f24;
       text-align: center;
@@ -642,7 +643,7 @@
       border-radius: 18px;
       border-color: transparent;
       background-color: #7a7a7a;
-      font-family: NotoSansCJKkr;
+      font-family: NotoSansCJKkr-Regular;
       font-size: 20px;
       color: #080f24;
       text-align: center;
