--- a/src/containers/MyMenu/MyMenu.scss
+++ b/src/containers/MyMenu/MyMenu.scss
@@ -32,9 +32,8 @@ body {
 
       .userid {
         height: auto;
-        font-family: NotoSansCJKkr;
+        font-family: AvenirLT;
         font-size: 55px;
-        font-weight: normal;
         font-style: normal;
         font-stretch: normal;
         line-height: 1.49;
@@ -67,7 +66,7 @@ body {
 
           .text {
             height: auto;
-            font-family: NotoSansCJKkr;
+            font-family: NotoSansCJKkr-Medium;
             font-size: 20px;
             font-weight: 500;
             font-style: normal;
@@ -121,7 +120,7 @@ body {
           .button_text {
             height: auto;
             margin-left: 10px;
-            font-family: NotoSansCJKkr;
+            font-family: NotoSansCJKkr-Medium;
             font-size: 20px;
             font-weight: 500;
             font-style: normal;
@@ -145,12 +144,13 @@ body {
 
     div {
       -ms-overflow-style: -ms-autohiding-scrollbar; // IE에서 스크롤바 감춤
-
+      scrollbar-width: none; //파이어폭스
       &::-webkit-scrollbar {
         display: none !important; // 윈도우 크롬 등
       }
 
       &:hover {
+        scrollbar-width: unset; //파이어폭스
         &::-webkit-scrollbar {
           display: block !important; // 윈도우 크롬 등
           width: 10px;
