### #46 반응형 css See: Github issue #46
### 작업내용
* 마이메뉴 반응형 설정
* 레시피 자세히 보기 시 말줄임표 될 경우 마우스 오버 시 보여주도록 설정

--- a/src/containers/MyMenu/MyMenu.scss
+++ b/src/containers/MyMenu/MyMenu.scss
@@ -46,6 +46,12 @@ body {
         grid-column: 2 / span 1;
 
         cursor: default;
+
+        @media (max-width: 750px) {
+          & {
+            grid-column: 1 / span 1;
+          }
+        }
       }
 
       .tab_container {
@@ -130,6 +136,18 @@ body {
             color: #7a7a7a;
             cursor: pointer;
           }
+        }
+
+        @media (max-width: 750px) {
+          & {
+            grid-column: 1 / span 1;
+          }
+        }
+      }
+
+      @media (max-width: 750px) {
+        & {
+          grid-template-columns: auto;
         }
       }
     }
