### #46 모바일 스크롤 안되게 수정 See: Github issue #46
### 작업내용
* 모바일 스크롤 안되도록 수정

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
   position: absolute;
   display: grid;
   grid-template-rows: 80px auto;
+  overflow: hidden;
   &.one {
     grid-template-rows: auto;
   }
