### #46 모바일 설정 See: Github issue #46
### 작업내용
* 모바일 레시피 등록 안되게 수정
* 모바일 검색 에디트 수정

--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -177,6 +177,12 @@
     &._hide {
       display: none;
     }
+
+    @media (max-width: 470px) {
+      & {
+        grid-column: 1 / span 3;
+      }
+    }
   }
 
   .searchresult_rect {
