--- a/src/containers/MainView/MainView.scss
+++ b/src/containers/MainView/MainView.scss
@@ -26,9 +26,9 @@ html,
 body {
   padding: 0;
   margin: 0;
-  //width: 100%;
+  width: 100%;
   height: 100%;
-  //overflow: hidden;
+  overflow: hidden;
   div {
     height: 100%;
   }
