### #46 재료검색 기능 수정 See: Github issue #46
### 작업내용
* 재료 검색 시 재료 갯수 호출하는 API 수정
* 재료 검색 시 재료 갯수 숫자 설정버튼 제거

--- a/src/containers/MainView/MainView.scss
+++ b/src/containers/MainView/MainView.scss
@@ -335,6 +335,12 @@ body {
             }
           }
         }
+
+        @media (max-width: 470px) {
+          & {
+            padding-left: 0;
+          }
+        }
       }
 
       &:hover {
@@ -355,7 +361,7 @@ body {
 
     @media (max-width: 470px) {
       & {
-        padding-left: 5%;
+        padding-left: 2%;
       }
     }
   }
