--- a/src/containers/SearchPopup/SearchPopup.scss
+++ b/src/containers/SearchPopup/SearchPopup.scss
@@ -85,6 +85,12 @@
           line-height: 0.55;
           letter-spacing: normal;
           text-align: center;
+
+          &::-webkit-inner-spin-button,
+          &::-webkit-outer-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+          }
         }
         .number_text {
           height: auto;
@@ -104,6 +110,12 @@
           line-height: 0.55;
           letter-spacing: normal;
           text-align: center;
+
+          &::-webkit-inner-spin-button,
+          &::-webkit-outer-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+          }
         }
       }
     }
