--- a/src/containers/Enrolment/Function/Enrolment.scss
+++ b/src/containers/Enrolment/Function/Enrolment.scss
@@ -87,17 +87,38 @@
 }
 
 .middle {
+    position: relative;
     width: 33.3333%;
     height: 100%;
     float: left;
 
     span {
         display: block;
-        height: 100%;
+        height: 0;
+        padding-bottom: 100%;
         background-repeat: no-repeat;
-        background-position: center;
+        background-position: bottom;
         background-size: contain;
         background-image: url('../../../static/images/glass1_empty_enrolment.png');
+    }
+
+    .drink-container {
+        display: block;
+        position: absolute;
+        width: 100%;
+        // min-height: 70%;
+        height: 0;
+        padding-bottom: 100%;
+        border: 1px solid #000;
+        bottom: 0;
+
+        // .drink-color {
+        //     display: block;
+        //     width: 100%;
+        //     height: 0;
+        //     padding-bottom: 100%;
+        //     border: 1px solid #000;
+        // }
     }
 }
 
