--- a/src/containers/Enrolment/Function/Enrolment.scss
+++ b/src/containers/Enrolment/Function/Enrolment.scss
@@ -94,12 +94,14 @@
 
     span {
         display: block;
-        height: 0;
-        padding-bottom: 100%;
+        position: absolute;
+        width: 100%;
+        height: 100%;
         background-repeat: no-repeat;
-        background-position: bottom;
+        background-position: center;
         background-size: contain;
         background-image: url('../../../static/images/glass1_empty_enrolment.png');
+        background-position: bottom;
     }
 
     .drink-container {
@@ -108,14 +110,13 @@
         width: 100%;
         // min-height: 70%;
         height: 0;
-        padding-bottom: 100%;
-        border: 1px solid #000;
+        padding-bottom: 70%;
+        // border: 1px solid #000;
         bottom: 0;
 
         // .drink-color {
         //     display: block;
         //     width: 100%;
-        //     height: 0;
         //     padding-bottom: 100%;
         //     border: 1px solid #000;
         // }
