### #53 Shake Me컴포넌트 개발 See: Github issue #53 --------------------------------------- ### 작업내용 * 재료 추가버튼 클릭 시 위에 쌓이도록 수정 * 재료 삭제 시 반영 안되던 문제 수정(내부 array 관리가 안되고 있었음) * 재료 Shake Me! 기능구현 완료 * Step간 이동 시 컵 재료 유지 되도록 수정 * Step1로 돌아간 경우 재료가 존재 시 컵 종류 변경에 따른 동적 변경 작업완료 * 재료 array 초기값 empty값으로 수정(step2이동 시 추가되는 게 맞음) * 재료 삭제 시 재료 이름 제대로 변경 안되던 문제 수정 * 재료의 비율이 0%인 경우 화면에 표시 안되도록 style 수정 * display:grid 사용하여 재료 반응형 표기 되도록 수정 * STEP1 컵 선택 시 이미지 Node찾지 않고 인자로 넘겨서 갱신하도록 수정

--- a/src/containers/ViewRecipe/Function/ViewRecipe.scss
+++ b/src/containers/ViewRecipe/Function/ViewRecipe.scss
@@ -50,12 +50,12 @@
 
 .detail-content-main-view-cup {
   position: absolute;
-  display: block;
+  // display: block;
   width: 100%;
-  height: 90%;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  height: 100%;
+  // left: 50%;
+  // top: 50%;
+  // transform: translate(-50%, -50%);
 }
 
 .detail-content-main-view-image {
