--- a/src/containers/Enrolment/Enrolment.scss
+++ b/src/containers/Enrolment/Enrolment.scss
@@ -26,24 +26,24 @@ input {
     width: 100%;
     height: 100%;
 
-    >div {
+    > div {
       width: auto;
       height: auto;
       position: absolute;
       left: 50%;
       top: 50%;
-      transform: translate(-50%,-50%);
+      transform: translate(-50%, -50%);
     }
 
     .picker-background {
-        display: block;
-        position: fixed;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        background: transparent;
-        z-index: -1;
+      display: block;
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background: transparent;
+      z-index: -1;
     }
   }
 
@@ -55,7 +55,7 @@ input {
 
   .content::after {
     display: block;
-    content: '';
+    content: "";
     clear: both;
   }
 }
